# nguyen add logback for server

--- a/army2.conf
+++ b/army2.conf
@@ -2,7 +2,7 @@
 post: 8122
 mysql-host: 127.0.0.1:3306
 mysql-user: root
-mysql-password: lAlbrZ6QY69@H1_bsXaYYE@M72u5_14T 
+mysql-password: 123456789
 mysql-database: army2
 iconversion2: 5
 valuesversion2: 5
