# nguyen fix commit

--- a/army2.conf
+++ b/army2.conf
@@ -1,6 +1,6 @@
 ﻿host: localhost
 post: 8122
-mysql-host: 127.0.0.1:3306
+mysql-host: localhost:14490
 mysql-user: root
 mysql-password: 123456789
 mysql-database: army2
