# nguyen add dockerfile fix

--- a/army2.conf
+++ b/army2.conf
@@ -1,6 +1,6 @@
 ﻿host: localhost
 post: 8122
-mysql-host: localhost:14490
+mysql-host: ${MYSQL_URL}
 mysql-user: root
 mysql-password: 123456789
 mysql-database: army2
